# Currency-tg-bot

./: CMakeLists.txt
src/: currency_parser.cpp  currency_parser.h  main.cpp  mytgbot.cpp  mytgbot.h
